--- a/.github/workflows/build-tailscale.yml
+++ b/.github/workflows/build-tailscale.yml
@@ -25,7 +25,12 @@ jobs:
       - name: Get current project release version
         id: get_current_version
         run: |
-          CURRENT_VERSION=$(curl -s https://api.github.com/repos/${{ github.repository }}/releases/latest | grep -oP '"tag_name": "\K(.*)(?=")')
+          RESPONSE=$(curl -s https://api.github.com/repos/${{ github.repository }}/releases/latest)
+          if echo "$RESPONSE" | grep -q '"tag_name":'; then
+            CURRENT_VERSION=$(echo "$RESPONSE" | grep -oP '"tag_name": "\K(.*)(?=")')
+          else
+            CURRENT_VERSION="0.0.0"  # 如果没有 Releases，默认使用 0.0.0
+          fi
           echo "Current project release version: $CURRENT_VERSION"
           echo "current_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
 
