--- a/.github/workflows/build-tailscale.yml
+++ b/.github/workflows/build-tailscale.yml
@@ -6,15 +6,13 @@ on:
     - cron: '0 1 * * *'  # Asia/Shanghai 时间10点（UTC 时间1:00）
 
 jobs:
-  check-version:
-    runs-on: ubuntu-latest
-    outputs:
-      should_build: ${{ steps.compare_versions.outputs.should_build }}
-      latest_version: ${{ steps.get_latest_version.outputs.version }}
+  build-and-release:
+    runs-on: macos-latest  # 使用最新的 macOS 环境（支持 ARM）
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # 获取最新 Tailscale 版本号
       - name: Get latest Tailscale version
         id: get_latest_version
         run: |
@@ -22,6 +20,7 @@ jobs:
           echo "Latest Tailscale version: $LATEST_VERSION"
           echo "latest_version=$LATEST_VERSION" >> $GITHUB_OUTPUT
 
+      # 获取当前项目的 Releases 版本号
       - name: Get current project release version
         id: get_current_version
         run: |
@@ -34,11 +33,14 @@ jobs:
           echo "Current project release version: $CURRENT_VERSION"
           echo "current_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
 
+      # 比较版本号，决定是否需要构建
       - name: Compare versions
         id: compare_versions
         run: |
           LATEST_VERSION="${{ steps.get_latest_version.outputs.latest_version }}"
           CURRENT_VERSION="${{ steps.get_current_version.outputs.current_version }}"
+          echo "Latest version from outputs: $LATEST_VERSION"
+          echo "Current version from outputs: $CURRENT_VERSION"
 
           # 去掉版本号中的 "v" 前缀
           LATEST_VERSION_NUM=$(echo "$LATEST_VERSION" | sed 's/^v//')
@@ -55,62 +57,55 @@ jobs:
             echo "should_build=false" >> $GITHUB_OUTPUT
           fi
 
-  build:
-    needs: check-version
-    if: ${{ needs.check-version.outputs.should_build == 'true' }}
-    runs-on: macos-latest  # 使用最新的 macOS 环境（支持 ARM）
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
+      # 如果检测到新版本，继续构建
       - name: Set up Go
+        if: steps.compare_versions.outputs.should_build == 'true'
         uses: actions/setup-go@v4
         with:
           go-version: '1.21'  # 使用 Go 1.21
 
       - name: Compile Tailscale
+        if: steps.compare_versions.outputs.should_build == 'true'
         run: |
-          LATEST_VERSION=${{ needs.check-version.outputs.latest_version }}
+          LATEST_VERSION=${{ steps.get_latest_version.outputs.latest_version }}
+          if [ -z "$LATEST_VERSION" ]; then
+            echo "Error: LATEST_VERSION is empty!"
+            exit 1
+          fi
           echo "Building Tailscale version: $LATEST_VERSION"
           go install tailscale.com/cmd/tailscale{,d}@$LATEST_VERSION
           mkdir -p dist
           cp $HOME/go/bin/tailscale $HOME/go/bin/tailscaled dist/
 
       - name: Upload artifacts
+        if: steps.compare_versions.outputs.should_build == 'true'
         uses: actions/upload-artifact@v3
         with:
           name: tailscale-binaries
           path: dist/
 
-  release:
-    needs: [check-version, build]
-    if: ${{ needs.check-version.outputs.should_build == 'true' }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: tailscale-binaries
-          path: dist/
-
+      # 创建 GitHub Release
       - name: Create GitHub Release
+        if: steps.compare_versions.outputs.should_build == 'true'
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}  # 自动使用 GitHub Token
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}  # 使用自定义的 GH_TOKEN
         with:
-          tag_name: ${{ needs.check-version.outputs.latest_version }}
-          release_name: Tailscale ${{ needs.check-version.outputs.latest_version }}
+          tag_name: ${{ steps.get_latest_version.outputs.latest_version }}
+          release_name: Tailscale ${{ steps.get_latest_version.outputs.latest_version }}
           body: |
             Tailscale binaries built for macOS ARM.
-            Version: ${{ needs.check-version.outputs.latest_version }}
+            Version: ${{ steps.get_latest_version.outputs.latest_version }}
           draft: false
           prerelease: false
 
+      # 上传 Release 附件
       - name: Upload Release Assets
+        if: steps.compare_versions.outputs.should_build == 'true'
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}  # 使用自定义的 GH_TOKEN
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist/tailscale
@@ -118,27 +113,31 @@ jobs:
           asset_content_type: application/octet-stream
 
       - name: Upload Release Assets (tailscaled)
+        if: steps.compare_versions.outputs.should_build == 'true'
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}  # 使用自定义的 GH_TOKEN
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist/tailscaled
           asset_name: tailscaled
           asset_content_type: application/octet-stream
 
+      # 发送 Telegram 通知
       - name: Send Telegram notification
+        if: steps.compare_versions.outputs.should_build == 'true'
         run: |
           MESSAGE="New Tailscale release! 🚀%0A%0A"
-          MESSAGE+="Version: ${{ needs.check-version.outputs.latest_version }}%0A"
-          MESSAGE+="Release URL: https://github.com/${{ github.repository }}/releases/tag/${{ needs.check-version.outputs.latest_version }}"
+          MESSAGE+="Version: ${{ steps.get_latest_version.outputs.latest_version }}%0A"
+          MESSAGE+="Release URL: https://github.com/${{ github.repository }}/releases/tag/${{ steps.get_latest_version.outputs.latest_version }}"
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage \
             -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
             -d text="$MESSAGE"
 
+  # 清理旧的运行日志
   cleanup-runs:
     runs-on: ubuntu-latest
-    needs: release  # 确保在 release 任务完成后执行
+    needs: build-and-release  # 确保在 build-and-release 任务完成后执行
     permissions:
       actions: write  # 需要 write 权限来删除运行日志
       contents: read  # 需要 read 权限来访问仓库信息
@@ -146,7 +145,7 @@ jobs:
       - name: Delete old workflow runs
         uses: Mattraks/delete-workflow-runs@v2
         with:
-          token: ${{ secrets.GH_TOKEN }}  # 使用默认的 GITHUB_TOKEN
+          token: ${{ secrets.GH_TOKEN }}  # 使用自定义的 GH_TOKEN
           repository: ${{ github.repository }}  # 当前仓库
           retain_days: 7  # 保留最近 7 天的运行日志
           keep_minimum_runs: 6  # 至少保留 6 条运行日志
