--- a/.github/workflows/build-tailscale.yml
+++ b/.github/workflows/build-tailscale.yml
@@ -95,9 +95,8 @@ jobs:
         if: steps.compare_versions.outputs.should_build == 'true'
         id: create_release
         uses: actions/create-release@v1
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}  # 使用自定义的 GH_TOKEN
         with:
+          token: ${{ secrets.GH_TOKEN }}  # 使用自定义的 GH_TOKEN
           tag_name: ${{ steps.get_latest_version.outputs.latest_version }}
           release_name: Tailscale ${{ steps.get_latest_version.outputs.latest_version }}
           body: |
@@ -110,8 +109,6 @@ jobs:
       - name: Upload Release Assets
         if: steps.compare_versions.outputs.should_build == 'true'
         uses: actions/upload-release-asset@v1
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}  # 使用自定义的 GH_TOKEN
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist/tailscale
@@ -121,8 +118,6 @@ jobs:
       - name: Upload Release Assets (tailscaled)
         if: steps.compare_versions.outputs.should_build == 'true'
         uses: actions/upload-release-asset@v1
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}  # 使用自定义的 GH_TOKEN
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist/tailscaled
