--- a/.github/workflows/build-tailscale.yml
+++ b/.github/workflows/build-tailscale.yml
@@ -1,10 +1,8 @@
 name: Build and Release Tailscale
-
 on:
   workflow_dispatch:  # 支持手动触发
   schedule:
     - cron: '0 1 * * *'  # 每天 UTC 1:00 (北京时间 10:00)
-
 jobs:
   build-and-release:
     runs-on: macos-latest  # 使用 macOS 环境编译
@@ -76,7 +74,6 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         with:
-          token: ${{ secrets.GH_TOKEN }}
           tag_name: ${{ steps.get_latest_version.outputs.latest_version }}
           release_name: "Tailscale ${{ steps.get_latest_version.outputs.latest_version }}"
           body: |
@@ -84,6 +81,8 @@ jobs:
             Version: ${{ steps.get_latest_version.outputs.latest_version }}
           draft: false
           prerelease: false
+        permissions:
+          contents: write
       # 上传 Release 文件
       - name: Upload Release Assets
         if: steps.compare_versions.outputs.should_build == 'true'
@@ -113,7 +112,6 @@ jobs:
           curl -s -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
             -d chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
             -d text="$MESSAGE"
- 
   # 清理历史运行记录
   cleanup-runs:
     runs-on: ubuntu-latest
