--- a/.github/workflows/build-tailscale.yml
+++ b/.github/workflows/build-tailscale.yml
@@ -17,19 +17,35 @@ jobs:
         run: |
           brew install jq
 
-      # 获取最新 Tailscale 版本号（带重试机制）
+      # 获取最新 Tailscale 版本号（带重试机制和 GitHub Token 认证）
       - name: Get latest Tailscale version
         id: get_latest_version
         run: |
           MAX_RETRIES=3  # 最大重试次数
           RETRY_DELAY=5  # 每次重试之间的延迟（秒）
 
+          # 检查 jq 是否已安装
+          if ! command -v jq &> /dev/null; then
+            echo "Error: jq is not installed!"
+            exit 1
+          fi
+
           for i in $(seq 1 $MAX_RETRIES); do
             echo "Attempt $i to fetch latest Tailscale version..."
 
-            # 获取 GitHub API 响应
-            RESPONSE=$(curl -s https://api.github.com/repos/tailscale/tailscale/releases/latest)
+            # 使用 GitHub Token 进行认证
+            RESPONSE=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/tailscale/tailscale/releases/latest)
             
+            # 打印完整的 API 响应（用于调试）
+            echo "API Response: $RESPONSE"
+
+            # 检查是否触发速率限制
+            RATE_LIMIT_REMAINING=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/rate_limit | jq -r '.resources.core.remaining')
+            if [ "$RATE_LIMIT_REMAINING" -eq 0 ]; then
+              echo "Error: GitHub API rate limit exceeded!"
+              exit 1
+            fi
+
             # 检查响应是否包含 tag_name
             if echo "$RESPONSE" | jq -e '.tag_name' > /dev/null 2>&1; then
               # 提取版本号
@@ -62,7 +78,7 @@ jobs:
       - name: Get current project release version
         id: get_current_version
         run: |
-          RESPONSE=$(curl -s https://api.github.com/repos/${{ github.repository }}/releases/latest)
+          RESPONSE=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/releases/latest)
           if echo "$RESPONSE" | grep -q '"tag_name":'; then
             CURRENT_VERSION=$(echo "$RESPONSE" | jq -r '.tag_name')
           else
@@ -130,7 +146,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}  # 使用自定义的 GH_TOKEN
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}  # 使用默认的 GITHUB_TOKEN
         with:
           tag_name: ${{ steps.get_latest_version.outputs.latest_version }}
           release_name: ${{ steps.get_latest_version.outputs.latest_version }}
@@ -145,7 +161,7 @@ jobs:
         if: steps.compare_versions.outputs.should_build == 'true'
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}  # 使用自定义的 GH_TOKEN
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}  # 使用默认的 GITHUB_TOKEN
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist/tailscale
@@ -156,7 +172,7 @@ jobs:
         if: steps.compare_versions.outputs.should_build == 'true'
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}  # 使用自定义的 GH_TOKEN
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}  # 使用默认的 GITHUB_TOKEN
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist/tailscaled
@@ -185,7 +201,7 @@ jobs:
       - name: Delete old workflow runs
         uses: Mattraks/delete-workflow-runs@v2
         with:
-          token: ${{ secrets.GH_TOKEN }}  # 使用自定义的 GH_TOKEN
+          token: ${{ secrets.GH_TOKEN }}  # 使用默认的 GITHUB_TOKEN
           repository: ${{ github.repository }}  # 当前仓库
           retain_days: 7  # 保留最近 7 天的运行日志
           keep_minimum_runs: 6  # 至少保留 6 条运行日志
