--- a/.github/workflows/build-tailscale.yml
+++ b/.github/workflows/build-tailscale.yml
@@ -1,10 +1,8 @@
 name: Build and Release Tailscale for macOS ARM
-
 on:
   workflow_dispatch:  # 手动触发
   schedule:
     - cron: '0 1 * * *'  # Asia/Shanghai 时间10点（UTC 时间1:00）
-
 jobs:
   build-and-release:
     runs-on: macos-latest  # 使用 macOS 环境
@@ -19,7 +17,7 @@ jobs:
       - name: Get latest Tailscale version
         id: get_latest_version
         run: |
-          RESPONSE=$(curl -s https://api.github.com/repos/tailscale/tailscale/releases/latest)
+          RESPONSE=$(curl -s -H "Authorization: token ${{ secrets.GH_TOKEN }}" https://api.github.com/repos/tailscale/tailscale/releases/latest)
           echo "Tailscale API Response: $RESPONSE" # Log the full response
           LATEST_VERSION=$(echo "$RESPONSE" | jq -r '.tag_name')
           if [ -z "$LATEST_VERSION" ] || [ "$LATEST_VERSION" == "null" ]; then
@@ -32,7 +30,7 @@ jobs:
       - name: Get current project release version
         id: get_current_version
         run: |
-          RESPONSE=$(curl -s https://api.github.com/repos/${{ github.repository }}/releases/latest)
+          RESPONSE=$(curl -s -H "Authorization: token ${{ secrets.GH_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/releases/latest)
           echo "Current repo API Response: $RESPONSE" # Log the full response
           CURRENT_VERSION=$(echo "$RESPONSE" | jq -r '.tag_name')
           if [ -z "$CURRENT_VERSION" ] || [ "$CURRENT_VERSION" == "null" ]; then
@@ -132,7 +130,6 @@ jobs:
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage \
             -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
             -d text="$MESSAGE"
-
   # 清理旧的运行日志
   cleanup-runs:
     runs-on: ubuntu-latest
